samples/_failures_safe/1761140024_809b5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87bb85df.c: In function ‘main’:
./samples/SAFE/__tmp_87bb85df.c:129:21: error: expected declaration or statement at end of input
  129 |                     heap_add(&heap_logs, timestamp, level, message);
      |                     ^~~~~~~~
./samples/SAFE/__tmp_87bb85df.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87bb85df.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87bb85df.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87bb85df.c:129:21: error: expected declaration or statement at end of input
